--- a/RTOS-Project.ioc
+++ b/RTOS-Project.ioc
@@ -16,7 +16,7 @@ FREERTOS.CountingSemaphores01=CountingSemaphore,2,Dynamic,NULL
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configMINIMAL_STACK_SIZE,FootprintOK,Queues01,configUSE_COUNTING_SEMAPHORES,CountingSemaphores01,BinarySemaphores01
 FREERTOS.Queues01=Sensor1Queue,1,float,0,Dynamic,NULL,NULL;Sensor2Queue,1,float,0,Dynamic,NULL,NULL;test,16,uint16_t,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=defaultTask,-2,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;ThreadP1,0,256,P1EntryFunc,Default,NULL,Dynamic,NULL,NULL;ThreadP2,0,256,P2EntryFunc,Default,NULL,Dynamic,NULL,NULL;SensorRead,0,256,SensorReadFunc,Default,NULL,Dynamic,NULL,NULL;InterruptSync,1,256,ITSyncFunc,Default,NULL,Dynamic,NULL,NULL;DebugThread,-3,256,DebugThreadFunc,Default,NULL,Dynamic,NULL,NULL;InitTask,2,512,InitTaskFunc,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,-2,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;ThreadP1,0,256,P1EntryFunc,Default,NULL,Dynamic,NULL,NULL;ThreadP2,0,256,P2EntryFunc,Default,NULL,Dynamic,NULL,NULL;SensorRead,0,256,SensorReadFunc,Default,NULL,Dynamic,NULL,NULL;DebugThread,-3,256,DebugThreadFunc,Default,NULL,Dynamic,NULL,NULL;InitTask,2,512,InitTaskFunc,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configMINIMAL_STACK_SIZE=256
 FREERTOS.configUSE_COUNTING_SEMAPHORES=1
 File.Version=6
@@ -28,7 +28,8 @@ Mcu.Family=STM32F4
 Mcu.IP0=CRC
 Mcu.IP1=DAC
 Mcu.IP10=TIM6
-Mcu.IP11=USART2
+Mcu.IP11=TIM7
+Mcu.IP12=USART2
 Mcu.IP2=DMA
 Mcu.IP3=FREERTOS
 Mcu.IP4=I2C1
@@ -37,7 +38,7 @@ Mcu.IP6=NVIC
 Mcu.IP7=RCC
 Mcu.IP8=SYS
 Mcu.IP9=TIM2
-Mcu.IPNb=12
+Mcu.IPNb=13
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -51,6 +52,7 @@ Mcu.Pin15=VP_FREERTOS_VS_CMSIS_V1
 Mcu.Pin16=VP_SYS_VS_tim1
 Mcu.Pin17=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin18=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin19=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin2=PA3
 Mcu.Pin3=PA4
 Mcu.Pin4=PA5
@@ -59,7 +61,7 @@ Mcu.Pin6=PC4
 Mcu.Pin7=PB10
 Mcu.Pin8=PB12
 Mcu.Pin9=PA11
-Mcu.PinsNb=19
+Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -82,6 +84,7 @@ NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.TIM2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM7_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -211,6 +214,9 @@ TIM2.IPParameters=Period,AutoReloadPreload
 TIM2.Period=89999999
 TIM6.IPParameters=Prescaler
 TIM6.Prescaler=13731
+TIM7.IPParameters=Period,Prescaler
+TIM7.Period=49999
+TIM7.Prescaler=179
 USART2.BaudRate=500000
 USART2.IPParameters=VirtualMode,BaudRate
 USART2.VirtualMode=VM_ASYNC
@@ -224,5 +230,7 @@ VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
+VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 board=custom
 isbadioc=false
