--- a/RTOS-Project.ioc
+++ b/RTOS-Project.ioc
@@ -15,8 +15,8 @@ FREERTOS.BinarySemaphores01=P1ITSem,Dynamic,NULL;P2ITSem,Dynamic,NULL;DebugThrea
 FREERTOS.CountingSemaphores01=CountingSemaphore,2,Dynamic,NULL
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configMINIMAL_STACK_SIZE,FootprintOK,Queues01,configUSE_COUNTING_SEMAPHORES,CountingSemaphores01,BinarySemaphores01
-FREERTOS.Queues01=Sensor1Queue,1,float,0,Dynamic,NULL,NULL;Sensor2Queue,1,float,0,Dynamic,NULL,NULL;test,16,uint16_t,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=defaultTask,-2,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;ThreadP1,0,256,P1EntryFunc,Default,NULL,Dynamic,NULL,NULL;ThreadP2,0,256,P2EntryFunc,Default,NULL,Dynamic,NULL,NULL;SensorRead,0,256,SensorReadFunc,Default,NULL,Dynamic,NULL,NULL;DebugThread,-3,256,DebugThreadFunc,Default,NULL,Dynamic,NULL,NULL;InitTask,2,512,InitTaskFunc,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Queues01=Sensor1Queue,1,float,0,Dynamic,NULL,NULL;Sensor2Queue,1,float,0,Dynamic,NULL,NULL;P1TelemetryQueue,1,float,0,Dynamic,NULL,NULL;P2TelemetryQueue,1,float,0,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,-2,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;ThreadP1,0,256,P1EntryFunc,Default,NULL,Dynamic,NULL,NULL;ThreadP2,0,256,P2EntryFunc,Default,NULL,Dynamic,NULL,NULL;SensorRead,0,256,SensorReadFunc,Default,NULL,Dynamic,NULL,NULL;DebugThread,-3,256,DebugThreadFunc,Default,NULL,Dynamic,NULL,NULL;InitTask,2,512,InitTaskFunc,Default,NULL,Dynamic,NULL,NULL;TelemetryThread,-1,512,TelemetryThreadFunc,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configMINIMAL_STACK_SIZE=256
 FREERTOS.configUSE_COUNTING_SEMAPHORES=1
 File.Version=6
@@ -177,7 +177,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_DAC_Init-DAC-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_CRC_Init-CRC-false-HAL-true,9-MX_I2C2_Init-I2C2-false-HAL-true,10-MX_TIM6_Init-TIM6-false-HAL-true,11-MX_TIM7_Init-TIM7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_DAC_Init-DAC-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_CRC_Init-CRC-false-HAL-true,9-MX_I2C2_Init-I2C2-false-HAL-true,10-MX_TIM6_Init-TIM6-false-HAL-true,11-MX_TIM7_Init-TIM7-false-HAL-true,12-MX_I2C3_Init-I2C3-false-HAL-true
 RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=45000000
