--- a/RTOS-Project.ioc
+++ b/RTOS-Project.ioc
@@ -1,6 +1,28 @@
 #MicroXplorer Configuration settings - do not modify
+Dma.I2C3_RX.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.I2C3_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.I2C3_RX.2.Instance=DMA1_Stream1
+Dma.I2C3_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.I2C3_RX.2.MemInc=DMA_MINC_ENABLE
+Dma.I2C3_RX.2.Mode=DMA_NORMAL
+Dma.I2C3_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.I2C3_RX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.I2C3_RX.2.Priority=DMA_PRIORITY_LOW
+Dma.I2C3_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.I2C3_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.I2C3_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.I2C3_TX.1.Instance=DMA1_Stream4
+Dma.I2C3_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.I2C3_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.I2C3_TX.1.Mode=DMA_NORMAL
+Dma.I2C3_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.I2C3_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.I2C3_TX.1.Priority=DMA_PRIORITY_LOW
+Dma.I2C3_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.Request0=USART2_TX
-Dma.RequestsNb=1
+Dma.Request1=I2C3_TX
+Dma.Request2=I2C3_RX
+Dma.RequestsNb=3
 Dma.USART2_TX.0.Direction=DMA_MEMORY_TO_PERIPH
 Dma.USART2_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.USART2_TX.0.Instance=DMA1_Stream6
@@ -11,12 +33,12 @@ Dma.USART2_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART2_TX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.USART2_TX.0.Priority=DMA_PRIORITY_LOW
 Dma.USART2_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-FREERTOS.BinarySemaphores01=P1ITSem,Dynamic,NULL;P2ITSem,Dynamic,NULL;DebugThreadSem,Dynamic,NULL;MissionTimerSem,Dynamic,NULL
+FREERTOS.BinarySemaphores01=P1ITSem,Dynamic,NULL;P2ITSem,Dynamic,NULL;DebugThreadSem,Dynamic,NULL;MissionTimerSem,Dynamic,NULL;TelemetryThreadSem,Dynamic,NULL
 FREERTOS.CountingSemaphores01=CountingSemaphore,2,Dynamic,NULL
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configMINIMAL_STACK_SIZE,FootprintOK,Queues01,configUSE_COUNTING_SEMAPHORES,CountingSemaphores01,BinarySemaphores01
 FREERTOS.Queues01=Sensor1Queue,1,float,0,Dynamic,NULL,NULL;Sensor2Queue,1,float,0,Dynamic,NULL,NULL;P1TelemetryQueue,1,float,0,Dynamic,NULL,NULL;P2TelemetryQueue,1,float,0,Dynamic,NULL,NULL;MissionTimerQueue,1,int,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=defaultTask,-2,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;ThreadP1,0,256,P1EntryFunc,Default,NULL,Dynamic,NULL,NULL;ThreadP2,0,256,P2EntryFunc,Default,NULL,Dynamic,NULL,NULL;SensorRead,0,256,SensorReadFunc,Default,NULL,Dynamic,NULL,NULL;DebugThread,-3,256,DebugThreadFunc,Default,NULL,Dynamic,NULL,NULL;InitTask,2,512,InitTaskFunc,Default,NULL,Dynamic,NULL,NULL;TelemetryThread,-1,512,TelemetryThreadFunc,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,-2,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;ThreadP1,0,256,P1EntryFunc,Default,NULL,Dynamic,NULL,NULL;ThreadP2,0,256,P2EntryFunc,Default,NULL,Dynamic,NULL,NULL;SensorRead,0,256,SensorReadFunc,Default,NULL,Dynamic,NULL,NULL;DebugThread,-3,256,DebugThreadFunc,Default,NULL,Dynamic,NULL,NULL;InitTask,1,512,InitTaskFunc,Default,NULL,Dynamic,NULL,NULL;TelemetryThread,-1,512,TelemetryThreadFunc,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configMINIMAL_STACK_SIZE=256
 FREERTOS.configUSE_COUNTING_SEMAPHORES=1
 File.Version=6
@@ -31,9 +53,8 @@ Mcu.Family=STM32F4
 Mcu.IP0=CRC
 Mcu.IP1=DAC
 Mcu.IP10=TIM2
-Mcu.IP11=TIM6
-Mcu.IP12=TIM7
-Mcu.IP13=USART2
+Mcu.IP11=TIM7
+Mcu.IP12=USART2
 Mcu.IP2=DMA
 Mcu.IP3=FREERTOS
 Mcu.IP4=I2C1
@@ -42,23 +63,23 @@ Mcu.IP6=I2C3
 Mcu.IP7=NVIC
 Mcu.IP8=RCC
 Mcu.IP9=SYS
-Mcu.IPNb=14
+Mcu.IPNb=13
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PA2
 Mcu.Pin10=PA8
-Mcu.Pin11=PA11
-Mcu.Pin12=PA12
-Mcu.Pin13=PC12
-Mcu.Pin14=PB8
-Mcu.Pin15=PB9
-Mcu.Pin16=VP_CRC_VS_CRC
-Mcu.Pin17=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin18=VP_SYS_VS_tim1
-Mcu.Pin19=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin11=PA10
+Mcu.Pin12=PA11
+Mcu.Pin13=PA12
+Mcu.Pin14=PC12
+Mcu.Pin15=PB8
+Mcu.Pin16=PB9
+Mcu.Pin17=VP_CRC_VS_CRC
+Mcu.Pin18=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin19=VP_SYS_VS_tim1
 Mcu.Pin2=PA3
-Mcu.Pin20=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin20=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin21=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin3=PA4
 Mcu.Pin4=PA5
@@ -74,11 +95,15 @@ Mcu.UserName=STM32F446RETx
 MxCube.Version=6.1.0
 MxDb.Version=DB.6.0.10
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
+NVIC.DMA1_Stream4_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.DMA1_Stream6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.I2C3_ER_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.I2C3_EV_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
@@ -90,10 +115,14 @@ NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.TIM2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM7_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM7_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=GreenLED
+PA10.Locked=true
+PA10.Signal=GPIO_Output
 PA11.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA11.GPIO_Label=DirectionP1
 PA11.GPIO_PuPd=GPIO_PULLDOWN
@@ -177,7 +206,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_DAC_Init-DAC-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_CRC_Init-CRC-false-HAL-true,9-MX_I2C2_Init-I2C2-false-HAL-true,10-MX_TIM6_Init-TIM6-false-HAL-true,11-MX_TIM7_Init-TIM7-false-HAL-true,12-MX_I2C3_Init-I2C3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_DAC_Init-DAC-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_CRC_Init-CRC-false-HAL-true,9-MX_I2C2_Init-I2C2-false-HAL-true,10-MX_TIM7_Init-TIM7-false-HAL-true,11-MX_I2C3_Init-I2C3-false-HAL-true
 RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=45000000
@@ -225,12 +254,10 @@ SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM2.IPParameters=Period,AutoReloadPreload
-TIM2.Period=899999
-TIM6.IPParameters=Prescaler
-TIM6.Prescaler=13731
+TIM2.Period=89999
 TIM7.IPParameters=Period,Prescaler
-TIM7.Period=50000
-TIM7.Prescaler=1800
+TIM7.Period=49999
+TIM7.Prescaler=1799
 USART2.BaudRate=500000
 USART2.IPParameters=VirtualMode,BaudRate
 USART2.VirtualMode=VM_ASYNC
@@ -242,8 +269,6 @@ VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
-VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
-VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 board=custom
