--- a/RTOS-Project.ioc
+++ b/RTOS-Project.ioc
@@ -128,11 +128,12 @@ PA11.GPIO_Label=DirectionP1
 PA11.GPIO_PuPd=GPIO_PULLDOWN
 PA11.Locked=true
 PA11.Signal=GPIO_Output
-PA12.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PA12.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PA12.GPIO_Label=Alive
 PA12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PA12.GPIO_PuPd=GPIO_PULLDOWN
 PA12.Locked=true
+PA12.PinState=GPIO_PIN_SET
 PA12.Signal=GPIO_Output
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
