--- a/RTOS-Project.ioc
+++ b/RTOS-Project.ioc
@@ -37,7 +37,7 @@ FREERTOS.BinarySemaphores01=P1ITSem,Dynamic,NULL;P2ITSem,Dynamic,NULL;DebugThrea
 FREERTOS.CountingSemaphores01=CountingSemaphore,2,Dynamic,NULL
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configMINIMAL_STACK_SIZE,FootprintOK,Queues01,configUSE_COUNTING_SEMAPHORES,CountingSemaphores01,BinarySemaphores01
-FREERTOS.Queues01=Sensor1Queue,1,float,0,Dynamic,NULL,NULL;Sensor2Queue,1,float,0,Dynamic,NULL,NULL;P1TelemetryQueue,1,float,0,Dynamic,NULL,NULL;P2TelemetryQueue,1,float,0,Dynamic,NULL,NULL;MissionTimerQueue,1,int,0,Dynamic,NULL,NULL
+FREERTOS.Queues01=Sensor1Queue,1,float,0,Dynamic,NULL,NULL;Sensor2Queue,1,float,0,Dynamic,NULL,NULL;P1TelemetryQueue,1,float,0,Dynamic,NULL,NULL;P2TelemetryQueue,1,float,0,Dynamic,NULL,NULL;MissionTimerQueue,1,int,0,Dynamic,NULL,NULL;MewMissionP1Queue,1,int,0,Dynamic,NULL,NULL;MewMissionP2Queue,1,int,0,Dynamic,NULL,NULL
 FREERTOS.Tasks01=defaultTask,-2,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;ThreadP1,0,256,P1EntryFunc,Default,NULL,Dynamic,NULL,NULL;ThreadP2,0,256,P2EntryFunc,Default,NULL,Dynamic,NULL,NULL;SensorRead,0,256,SensorReadFunc,Default,NULL,Dynamic,NULL,NULL;DebugThread,-3,256,DebugThreadFunc,Default,NULL,Dynamic,NULL,NULL;InitTask,1,512,InitTaskFunc,Default,NULL,Dynamic,NULL,NULL;TelemetryThread,-1,512,TelemetryThreadFunc,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configMINIMAL_STACK_SIZE=256
 FREERTOS.configUSE_COUNTING_SEMAPHORES=1
