changed input interrupt pin

--- a/RTOS-Project.ioc
+++ b/RTOS-Project.ioc
@@ -67,28 +67,29 @@ Mcu.IPNb=13
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
-Mcu.Pin1=PA2
-Mcu.Pin10=PA8
-Mcu.Pin11=PA10
-Mcu.Pin12=PA11
-Mcu.Pin13=PA12
-Mcu.Pin14=PC12
-Mcu.Pin15=PB8
-Mcu.Pin16=PB9
-Mcu.Pin17=VP_CRC_VS_CRC
-Mcu.Pin18=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin19=VP_SYS_VS_tim1
-Mcu.Pin2=PA3
-Mcu.Pin20=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin21=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin3=PA4
-Mcu.Pin4=PA5
-Mcu.Pin5=PA6
-Mcu.Pin6=PC4
-Mcu.Pin7=PB10
-Mcu.Pin8=PB12
-Mcu.Pin9=PC9
-Mcu.PinsNb=22
+Mcu.Pin1=PC2
+Mcu.Pin10=PC9
+Mcu.Pin11=PA8
+Mcu.Pin12=PA10
+Mcu.Pin13=PA11
+Mcu.Pin14=PA12
+Mcu.Pin15=PC12
+Mcu.Pin16=PB8
+Mcu.Pin17=PB9
+Mcu.Pin18=VP_CRC_VS_CRC
+Mcu.Pin19=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin2=PA2
+Mcu.Pin20=VP_SYS_VS_tim1
+Mcu.Pin21=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin22=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin3=PA3
+Mcu.Pin4=PA4
+Mcu.Pin5=PA5
+Mcu.Pin6=PA6
+Mcu.Pin7=PC4
+Mcu.Pin8=PB10
+Mcu.Pin9=PB12
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -100,6 +101,7 @@ NVIC.DMA1_Stream4_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.DMA1_Stream6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.I2C3_ER_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
@@ -165,11 +167,17 @@ PB9.Signal=I2C1_SDA
 PC12.Mode=I2C
 PC12.Signal=I2C2_SDA
 PC13.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-PC13.GPIO_Label=InputInterrupt
+PC13.GPIO_Label=USER_BUTTON
 PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
-PC13.GPIO_PuPd=GPIO_PULLDOWN
+PC13.GPIO_PuPd=GPIO_NOPULL
 PC13.Locked=true
 PC13.Signal=GPXTI13
+PC2.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PC2.GPIO_Label=InputInterrupt
+PC2.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PC2.GPIO_PuPd=GPIO_PULLDOWN
+PC2.Locked=true
+PC2.Signal=GPXTI2
 PC4.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC4.GPIO_Label=Alive_backup
 PC4.GPIO_PuPd=GPIO_NOPULL
@@ -253,6 +261,8 @@ SH.COMP_DAC2_group.0=DAC_OUT2,DAC_OUT2
 SH.COMP_DAC2_group.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SH.GPXTI2.0=GPIO_EXTI2
+SH.GPXTI2.ConfNb=1
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM2.IPParameters=Period,AutoReloadPreload
 TIM2.Period=89999
