refactoring librreria MPU6050 e freertos.c

--- a/RTOS-Project.ioc
+++ b/RTOS-Project.ioc
@@ -1,7 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
 Mcu.Family=STM32F4
 ProjectManager.MainLocation=Core/Src
-FREERTOS.Queues01=Sensor1Queue,1,float,0,Dynamic,NULL,NULL;Sensor2Queue,1,float,0,Dynamic,NULL,NULL;P1TelemetryQueue,1,float,0,Dynamic,NULL,NULL;P2TelemetryQueue,1,float,0,Dynamic,NULL,NULL;MissionDataQueue,1,int,0,Dynamic,NULL,NULL;MewMissionP1Queue,1,int,0,Dynamic,NULL,NULL;MewMissionP2Queue,1,int,0,Dynamic,NULL,NULL
+FREERTOS.Queues01=Sensor1Queue,1,float,0,Dynamic,NULL,NULL;Sensor2Queue,1,float,0,Dynamic,NULL,NULL;P1TelemetryQueue,1,float,0,Dynamic,NULL,NULL;P2TelemetryQueue,1,float,0,Dynamic,NULL,NULL;MissionDataQueue,1,int,0,Dynamic,NULL,NULL;MewMissionP1Queue,1,int,0,Dynamic,NULL,NULL;MewMissionP2Queue,1,int,0,Dynamic,NULL,NULL;MpuDataQueue,1,uint32_t,0,Dynamic,NULL,NULL
 USART2.IPParameters=VirtualMode,BaudRate
 RCC.CortexFreq_Value=180000000
 FREERTOS.BinarySemaphores01=P1ITSem,Dynamic,NULL;P2ITSem,Dynamic,NULL;MissionTimerSem,Dynamic,NULL;TelemetryThreadSem,Dynamic,NULL
@@ -52,7 +52,7 @@ Mcu.ThirdPartyNb=0
 RCC.SDIOFreq_Value=180000000
 RCC.HCLKFreq_Value=180000000
 Mcu.IPNb=13
-TIM2.IPParameters=Period,AutoReloadPreload
+TIM2.IPParameters=Period,AutoReloadPreload,Prescaler
 ProjectManager.PreviousToolchain=
 RCC.APB2TimFreq_Value=180000000
 RCC.SPDIFRXFreq_Value=180000000
@@ -119,6 +119,7 @@ ProjectManager.ProjectName=RTOS-Project
 RCC.MCO2PinFreq_Value=180000000
 PB9.Signal=I2C1_SDA
 Mcu.Package=LQFP64
+TIM2.Prescaler=1
 PA6.Signal=GPIO_Output
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 USART2.VirtualMode=VM_ASYNC
@@ -215,7 +216,7 @@ PC2.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA10.GPIOParameters=GPIO_Label
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PC2.GPIO_PuPd=GPIO_PULLDOWN
-TIM2.Period=89999
+TIM2.Period=899999
 ProjectManager.FreePins=false
 RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PWRFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value
 PC9.GPIOParameters=GPIO_PuPdOD
