--- a/RTOS-Project.ioc
+++ b/RTOS-Project.ioc
@@ -8,8 +8,10 @@ FREERTOS.BinarySemaphores01=P1ITSem,Dynamic,NULL;P2ITSem,Dynamic,NULL;MissionTim
 Dma.USART2_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F446RETx
+Dma.I2C2_TX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
 PC9.GPIO_PuPdOD=GPIO_NOPULL
 PB10.Mode=I2C
+NVIC.DMA1_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 RCC.PLLCLKFreq_Value=180000000
 PC12.Signal=I2C2_SDA
 RCC.PLLQCLKFreq_Value=180000000
@@ -35,8 +37,8 @@ PA12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 Mcu.IP4=I2C1
 Mcu.IP5=I2C2
 RCC.FCLKCortexFreq_Value=180000000
-I2C1.IPParameters=I2C_Mode
 Mcu.IP2=DMA
+I2C1.IPParameters=I2C_Mode
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 Mcu.IP3=FREERTOS
 Dma.I2C3_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
@@ -82,6 +84,7 @@ ProjectManager.ProjectBuild=false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA4.Locked=true
+PC12.GPIO_PuPdOD=GPIO_NOPULL
 Mcu.IP10=TIM2
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true
 Mcu.IP12=USART2
@@ -97,31 +100,37 @@ Dma.I2C3_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 ProjectManager.BackupPrevious=false
 RCC.VCOInputFreq_Value=2000000
 PC4.GPIO_Label=Alive_backup
+Dma.I2C2_TX.4.MemInc=DMA_MINC_ENABLE
 PA8.GPIO_PuPdOD=GPIO_NOPULL
+Dma.I2C2_RX.3.Priority=DMA_PRIORITY_LOW
 VP_SYS_VS_tim1.Mode=TIM1
 NVIC.TIM2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 File.Version=6
 PA10.GPIO_Label=GreenLED
 PC13.GPIO_PuPd=GPIO_NOPULL
 PC9.Mode=I2C
-PB8.Locked=true
 PA8.Signal=I2C3_SCL
+PB8.Locked=true
 RCC.PLLRCLKFreq_Value=180000000
 Dma.USART2_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
 Dma.I2C3_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
+Dma.I2C2_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART2_TX.0.Direction=DMA_MEMORY_TO_PERIPH
-Dma.RequestsNb=3
+Dma.RequestsNb=5
 Dma.USART2_TX.0.Instance=DMA1_Stream6
 ProjectManager.HalAssertFull=false
 ProjectManager.ProjectName=RTOS-Project
+NVIC.DMA1_Stream7_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 RCC.MCO2PinFreq_Value=180000000
 PB9.Signal=I2C1_SDA
 Mcu.Package=LQFP64
 TIM2.Prescaler=1
 PA6.Signal=GPIO_Output
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
+Dma.I2C2_RX.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.I2C2_TX.4.PeriphInc=DMA_PINC_DISABLE
 USART2.VirtualMode=VM_ASYNC
 Dma.I2C3_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
 SH.COMP_DAC1_group.ConfNb=1
@@ -130,18 +139,24 @@ NVIC.TimeBaseIP=TIM1
 PA10.Signal=GPIO_Output
 FREERTOS.FootprintOK=true
 Dma.I2C3_RX.2.Direction=DMA_PERIPH_TO_MEMORY
-Dma.I2C3_RX.2.MemInc=DMA_MINC_ENABLE
 Dma.USART2_TX.0.Mode=DMA_NORMAL
+Dma.I2C3_RX.2.MemInc=DMA_MINC_ENABLE
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
 NVIC.EXTI2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 Dma.I2C3_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.I2C2_RX.3.MemInc=DMA_MINC_ENABLE
+Dma.I2C2_RX.3.Mode=DMA_NORMAL
 Dma.Request2=I2C3_RX
 RCC.CECFreq_Value=32786.88524590164
 Dma.Request1=I2C3_TX
 RCC.APB1TimFreq_Value=90000000
+Dma.Request4=I2C2_TX
+Dma.Request3=I2C2_RX
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PC4.Locked=true
+PB10.GPIOParameters=GPIO_PuPdOD
 PA12.GPIO_PuPd=GPIO_PULLDOWN
+Dma.I2C2_TX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 RCC.SAIBFreq_Value=96000000
 Dma.Request0=USART2_TX
 NVIC.DMA1_Stream6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
@@ -156,10 +171,12 @@ PA6.GPIOParameters=GPIO_Label
 SH.COMP_DAC2_group.ConfNb=1
 SH.COMP_DAC1_group.0=DAC_OUT1,DAC_OUT1
 Dma.I2C3_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.I2C2_TX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 ProjectManager.ProjectFileName=RTOS-Project.ioc
 FREERTOS.Tasks01=defaultTask,-2,512,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;ThreadP1,0,256,P1EntryFunc,Default,NULL,Dynamic,NULL,NULL;ThreadP2,0,256,P2EntryFunc,Default,NULL,Dynamic,NULL,NULL;SensorRead,0,256,SensorReadFunc,Default,NULL,Dynamic,NULL,NULL;InitTask,1,512,InitTaskFunc,Default,NULL,Dynamic,NULL,NULL;TelemetryThread,-1,512,TelemetryThreadFunc,Default,NULL,Dynamic,NULL,NULL
 Dma.USART2_TX.0.MemInc=DMA_MINC_ENABLE
 Mcu.PinsNb=23
+Dma.I2C2_RX.3.Instance=DMA1_Stream2
 I2C3.OwnAddress=2
 ProjectManager.NoMain=false
 PC4.GPIO_PuPd=GPIO_NOPULL
@@ -167,23 +184,28 @@ PC13.Locked=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 PC13.Signal=GPXTI13
 RCC.FMPI2C1Freq_Value=45000000
+PB10.GPIO_PuPdOD=GPIO_NOPULL
 RCC.VCOI2SInputFreq_Value=1000000
 PC2.Signal=GPXTI2
 PC4.Signal=GPIO_Output
 PA11.GPIO_Label=DirectionP1
+Dma.I2C2_RX.3.PeriphInc=DMA_PINC_DISABLE
 ProjectManager.DefaultFWLocation=true
 NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 PB12.Locked=true
+Dma.I2C2_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 ProjectManager.DeletePrevious=true
 FREERTOS.CountingSemaphores01=CountingSemaphore,2,Dynamic,NULL
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 USART2.BaudRate=500000
 PA12.GPIO_Label=Alive
 RCC.FamilyName=M
+PC12.GPIOParameters=GPIO_PuPdOD
+Dma.I2C2_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.I2C3_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 PA3.Mode=Asynchronous
-I2C3.GeneralCallMode=I2C_GENERALCALL_ENABLE
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
+I2C3.GeneralCallMode=I2C_GENERALCALL_ENABLE
 Dma.I2C3_RX.2.Mode=DMA_NORMAL
 PA11.Locked=true
 SH.GPXTI2.ConfNb=1
@@ -192,8 +214,10 @@ I2C1.I2C_Mode=I2C_Standard
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 PB9.Mode=I2C
 PB9.Locked=true
+NVIC.I2C2_ER_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 PC2.Locked=true
 ProjectManager.RegisterCallBack=
+Dma.I2C2_RX.3.FIFOMode=DMA_FIFOMODE_DISABLE
 RCC.USBFreq_Value=180000000
 PB10.Signal=I2C2_SCL
 RCC.VCOI2SOutputFreq_Value=192000000
@@ -213,8 +237,11 @@ VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 RCC.PLLI2SPCLKFreq_Value=96000000
 PC13.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC2.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+Dma.I2C2_TX.4.FIFOMode=DMA_FIFOMODE_DISABLE
 PA10.GPIOParameters=GPIO_Label
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+Dma.I2C2_TX.4.Direction=DMA_MEMORY_TO_PERIPH
+Dma.I2C2_TX.4.Priority=DMA_PRIORITY_LOW
 PC2.GPIO_PuPd=GPIO_PULLDOWN
 TIM2.Period=899999
 ProjectManager.FreePins=false
@@ -239,9 +266,9 @@ Dma.I2C3_TX.1.Direction=DMA_MEMORY_TO_PERIPH
 RCC.SYSCLKFreq_VALUE=180000000
 Mcu.Pin22=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin20=VP_SYS_VS_tim1
-FREERTOS.configUSE_COUNTING_SEMAPHORES=1
-Dma.I2C3_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
 Mcu.Pin21=VP_TIM2_VS_ClockSourceINT
+Dma.I2C3_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+FREERTOS.configUSE_COUNTING_SEMAPHORES=1
 Dma.USART2_TX.0.PeriphInc=DMA_PINC_DISABLE
 PA10.Locked=true
 NVIC.ForceEnableDMAVector=true
@@ -249,6 +276,7 @@ KeepUserPlacement=false
 PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 Dma.I2C3_TX.1.Priority=DMA_PRIORITY_LOW
+Dma.I2C2_TX.4.Instance=DMA1_Stream7
 ProjectManager.CompilerOptimize=6
 PA11.Signal=GPIO_Output
 ProjectManager.HeapSize=0x200
@@ -261,6 +289,7 @@ Mcu.Pin19=VP_FREERTOS_VS_CMSIS_V1
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 ProjectManager.ComputerToolchain=false
 Mcu.Pin17=PB9
+NVIC.I2C2_EV_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 Mcu.Pin18=VP_CRC_VS_CRC
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 Mcu.Pin11=PA8
@@ -270,8 +299,8 @@ PB8.Mode=I2C
 NVIC.I2C3_ER_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 RCC.PLLN=180
 Mcu.Pin10=PC9
-PA2.Mode=Asynchronous
 PB8.Signal=I2C1_SCL
+PA2.Mode=Asynchronous
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 RCC.PWRFreq_Value=180000000
 PA8.Mode=I2C
@@ -284,4 +313,5 @@ Dma.I2C3_RX.2.PeriphInc=DMA_PINC_DISABLE
 PB12.Signal=GPIO_Output
 ProjectManager.LibraryCopy=1
 PA6.Locked=true
+Dma.I2C2_TX.4.Mode=DMA_NORMAL
 isbadioc=false
