--- a/RTOS-Project.ioc
+++ b/RTOS-Project.ioc
@@ -14,7 +14,7 @@ PC10.Signal=USART3_TX
 PC12.Signal=I2C2_SDA
 RCC.PLLQCLKFreq_Value=180000000
 PA12.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_DAC_Init-DAC-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_CRC_Init-CRC-false-HAL-true,8-MX_I2C2_Init-I2C2-false-HAL-true,9-MX_TIM7_Init-TIM7-false-HAL-true,10-MX_I2C3_Init-I2C3-false-HAL-true,11-MX_USART3_UART_Init-USART3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_DAC_Init-DAC-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_CRC_Init-CRC-false-HAL-true,7-MX_I2C2_Init-I2C2-false-HAL-true,8-MX_TIM7_Init-TIM7-false-HAL-true,9-MX_I2C3_Init-I2C3-false-HAL-true,10-MX_USART3_UART_Init-USART3-false-HAL-true
 PA11.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA6.GPIO_Label=OutputTimer
 RCC.PLLI2SRCLKFreq_Value=96000000
@@ -181,6 +181,7 @@ PC10.Mode=Asynchronous
 PA11.GPIO_Label=DirectionP1
 ProjectManager.DefaultFWLocation=true
 NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
+RCC.APB1TimCLKDivider=2
 PB12.Locked=true
 ProjectManager.DeletePrevious=true
 FREERTOS.CountingSemaphores01=CountingSemaphore,2,Dynamic,NULL
@@ -232,7 +233,7 @@ Dma.I2C3_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAl
 PC2.GPIO_PuPd=GPIO_PULLDOWN
 TIM2.Period=899999
 ProjectManager.FreePins=false
-RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PWRFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value
+RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimCLKDivider,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PWRFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value
 PC9.GPIOParameters=GPIO_PuPdOD
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F446R(C-E)Tx
@@ -297,4 +298,4 @@ PB12.GPIOParameters=GPIO_Label
 PB12.Signal=GPIO_Output
 ProjectManager.LibraryCopy=1
 PA6.Locked=true
-isbadioc=false
+isbadioc=true
